# iaklogger

./: CLAUDE.md  DEPLOY.md  MANIFEST  MANIFEST.in  README.md  example.py  iaklogger.py  licence.txt  log.txt  pyproject.toml  setup.cfg  setup.py  test_iaklogger.py
iaklogger/: __init__.py  iaklogger.py  main.py
iaklogger.egg-info/: PKG-INFO  SOURCES.txt
